# UltraI2V

./: .gitignore  README.md  convert_to_diffusers_weights.py  filter_data.py  merge_wan_weights.py  pyproject.toml  requirements.txt  requirements_npu.txt
assets/: simple_prompts.txt
assets/i2v/: images.txt  prompts.txt
configs/: filter_config.yaml
configs/train/: test_train_fsdp.yaml
eval/: eval_flashi2v.py  gen_vbench_eval_data.py  gen_vbench_eval_data_camera.py  vbench_idx_to_name.py  vbench_idx_to_name.txt
infer/: infer_flashi2v.py  infer_t2v.py
inference/: inference.py  wan2_1_1_3b_t2v.py  wan2_1_1_3b_t2v.sh
scripts/: filter_data.sh  test_train_fsdp.sh
scripts/gpu/: infer_flashi2v.sh  infer_t2v.sh  test_train_fsdp.sh  train_flashi2v_14b.sh  train_flashi2v_1_3b.sh  train_wan_t2v.sh
scripts/npu/: infer_t2v.sh  test_train_fsdp_cp_npu.sh  test_train_fsdp_cp_npu_multinode.sh  test_train_fsdp_npu.sh
test/: redistribution_test.py  skiparse_test.py  test.py  test2.py
torchdiff/distributed/: checkpoint.py  cp_wrapper.py  fsdp2_wrapper.py  parallel_plan_example.py  redistribution.py  utils.py
torchdiff/modules/: __init__.py  attention.py  flashi2v.py  osp_hi.py  t5.py  vae.py  want2v.py
torchdiff/pipelines/: __init__.py  flashi2v_pipeline.py  t2v_pipeline.py
torchdiff/schedulers/: __init__.py  flow_matching.py
torchdiff/utils/: clip_grads.py  constant.py  encoder_cache.py  filter.py  infer_utils.py  log_utils.py  utils.py
train/: train.py  train_flashi2v.py  train_fsdp.py  train_fsdp_bak.py
ultrai2v/data/: __init__.py
ultrai2v/modules/: t5.py  (+6 more)
(+78 files in other folders)
