[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchdiff"
version = "1.0"
description = "Video trainer and runner based on torch."
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "opencv-python>=4.9.0.80",
    "diffusers>=0.31.0",
    "transformers>=4.49.0",
    "tokenizers>=0.20.3",
    "accelerate>=1.1.1",
    "tqdm",
    "imageio",
    "easydict",
    "ftfy",
    "dashscope",
    "imageio-ffmpeg",
    "gradio>=5.0.0",
    "numpy>=1.23.5,<2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort",
    "mypy",
    "huggingface-hub[cli]"
]

[tool.setuptools]
packages = ["torchdiff"]

[tool.setuptools.package-data]
"torchdiff" = ["**/*.py"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true


